[project]
name = "songs"
version = "0.1.0"
description = "IBM Back-End Developer project: Songs API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==22.3.0",
    "coverage==6.3.2",
    "factory-boy==2.12.0",
    "flake8==4.0.1",
    "flask==2.1.2",
    "flask-cors>=5.0.1",
    "flask-sqlalchemy==2.5.1",
    "flask-talisman>=1.1.0",
    "gunicorn==20.1.0",
    "honcho==1.1.0",
    "httpie==3.2.1",
    "nose==1.3.7",
    "pinocchio==0.4.3",
    "psycopg2>=2.9.10",
    "pylint==2.14.0",
    "pymongo>=4.11.3",
    "pytest>=8.3.5",
    "python-dotenv==0.20.0",
    "sqlalchemy==1.4.46",
    "werkzeug==2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
